--- a/gb/23/4/5/n13966005.md
+++ b/gb/23/4/5/n13966005.md
@@ -1,24 +1,24 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/19920513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/19920513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/19920513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>法国南特四场大爆满 观众：神韵带来幸福</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2023/04/id13966008-230405120104100101-600x400.jpg" />
 <h6></h6>
 <hr>
-	<p>【大纪元2023年04月06日讯】（大纪元法国南特记者站报导）4月5日下午，<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md#1">神韵</a>国际艺术团于南特市议厅（Cité des Congrès de Nantes）进行了第四场演出同样大爆满。神韵艺术家们在雷动的掌声中，三次谢幕，结束了本演季在该市的演出。</p>
-<h2>副市长：<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md#1">神韵</a>色彩靓丽 令人赏心悦目</h2>
-<figure id="attachment_13966012" aria-describedby="caption-attachment-13966012" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/04/id13966012-230405153825100101.jpg"><img class="size-large wp-image-13966012" title="" src="https://i.epochtimes.com/assets/uploads/2023/04/id13966012-230405153825100101-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-13966012" class="wp-caption-text">2023年4月5日下午，旺代省阿普勒蒙（Apremont）市副市长Stéphane Buffetaut于南特市议厅观看了神韵演出。（新唐人电视台）</figcaption></figure>
+	<p>【大纪元2023年04月06日讯】（大纪元法国南特记者站报导）4月5日下午，神韵国际艺术团于南特市议厅（Cité des Congrès de Nantes）进行了第四场演出同样大爆满。神韵艺术家们在雷动的掌声中，三次谢幕，结束了本演季在该市的演出。</p>
+<h2>副市长：神韵色彩靓丽 令人赏心悦目</h2>
+<figure id="attachment_13966012" aria-describedby="caption-attachment-13966012" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/04/id13966012-230405153825100101.jpg"><img decoding="async" class="size-large wp-image-13966012" title="" src="https://i.epochtimes.com/assets/uploads/2023/04/id13966012-230405153825100101-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-13966012" class="wp-caption-text">2023年4月5日下午，旺代省阿普勒蒙（Apremont）市副市长Stéphane Buffetaut于南特市议厅观看了神韵演出。（新唐人电视台）</figcaption></figure>
 <p>旺代省阿普勒蒙（Apremont）市副市长Stéphane Buffetaut表示：“我的嫂子是满族人，所以我很有兴趣来看看这个演出，她非常靓丽，充满了色彩，还有传递的信息让我感动。”</p>
 <p>从艺术的角度，Buffetaut盛赞：“感觉这是一场非常谐和的演出，明亮的色彩，令人惊艳，充满情感，舞蹈演员们拥有真正的技艺，并充满了优雅，服装非常壮美，色彩丰富，闪闪发光，令人赏心悦目，音乐也非常动听。”</p>
-<p>对于神韵复兴中国五千年<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E4%BC%A0%E7%BB%9F%E6%96%87%E5%8C%96.md#1">传统文化</a>，Buffetaut很赞同，“中国文明是古老的，那是建立在深刻的价值观之上，中国是这样，法国也是这样，法国也经历过大革命，所以我们不能抹杀历史，那将是一个大错误。”</p>
+<p>对于神韵复兴中国五千年传统文化，Buffetaut很赞同，“中国文明是古老的，那是建立在深刻的价值观之上，中国是这样，法国也是这样，法国也经历过大革命，所以我们不能抹杀历史，那将是一个大错误。”</p>
 <p>“我们看到了一群中国人不想失去使他们文明伟大的东西。”他说。</p>
-<p>演出展示了中国<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E4%BC%A0%E7%BB%9F%E6%96%87%E5%8C%96.md#1">传统文化</a>的精神内涵，Buffetaut表示自己是天主教徒，“顾名思义，我非常重视超验的东西以及神与人之间的连系。”他认为，演出体现了“不是所有的东西都是物质化或唯物的，恰恰相反，除了唯物主义，还有其他东西。”</p>
+<p>演出展示了中国传统文化的精神内涵，Buffetaut表示自己是天主教徒，“顾名思义，我非常重视超验的东西以及神与人之间的连系。”他认为，演出体现了“不是所有的东西都是物质化或唯物的，恰恰相反，除了唯物主义，还有其它东西。”</p>
 <h2>宪兵中尉：神韵带来幸福的气息</h2>
-<figure id="attachment_13966015" aria-describedby="caption-attachment-13966015" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/04/id13966015-230405112450100101.jpg"><img class="size-large wp-image-13966015" title="" src="https://i.epochtimes.com/assets/uploads/2023/04/id13966015-230405112450100101-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-13966015" class="wp-caption-text">2023年4月5日下午，宪兵中尉David Mevel偕夫人Stéphanie Mevel从圣马洛赶到南特，观赏了神韵世界艺术团在南特市议厅上演的第四场演出。（张妮／大纪元）</figcaption></figure>
+<figure id="attachment_13966015" aria-describedby="caption-attachment-13966015" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/04/id13966015-230405112450100101.jpg"><img decoding="async" class="size-large wp-image-13966015" title="" src="https://i.epochtimes.com/assets/uploads/2023/04/id13966015-230405112450100101-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-13966015" class="wp-caption-text">2023年4月5日下午，宪兵中尉David Mevel偕夫人Stéphanie Mevel从圣马洛赶到南特，观赏了神韵世界艺术团在南特市议厅上演的第四场演出。（张妮／大纪元）</figcaption></figure>
 <p>“演出作为一个奇观，非常舒缓；有着一种禅意，（展示了）仁爱，带给人一种幸福的气息！”看过神韵演出，法国宪兵中尉David Mevel如是说。他赞美神韵演出展示了中华传统文化的丰富多彩，“这确实是一种令人印象深刻的整体文化。”</p>
 <p>4月5日下午，David Mevel偕夫人Stéphanie Mevel专门从圣马洛驱车2个小时来观赏演出。</p>
-<p>“这场演出真的非常感人”，Mevel说：“音乐悦耳动听，舞蹈中讲述的故事非常好，从场景<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%A4%A9%E5%B9%95.md#1">天幕</a>背景）中能够看到一些关于中国的历史景观。这确实是一种相当感性的体验，再加上音乐，真是殊胜辉煌。”</p>
-<p>“艺术家们的演技也给我留下很深的印象”，他说，“他们起舞时，他们跳跃翻腾时，（动作）似乎很简单，而他们落地时，你几乎听不到声音，在管弦乐队乐音的映衬下，那个场景真美。”</p>
+<p>“这场演出真的非常感人”，Mevel说：“音乐悦耳动听，舞蹈中讲述的故事非常好，从场景（天幕背景）中能够看到一些关于中国的历史景观。这确实是一种相当感性的体验，再加上音乐，真是殊胜辉煌。”</p>
+<p>“艺术家们的演技也给我留下很深的印象”，他说，“他们起舞时，他们跳跃翻腾时，（动作）似乎很简单，而他们落地时，你几乎听不到声音，在管弦乐团乐音的映衬下，那个场景真美。”</p>
 <p>他称赞神韵演出独具匠心的编排，展示了中华民族特有的韵味。“演出中还有女高音演唱，她有着动人的声音，（中华）传统乐器的演奏，这（种组合）真的很好，是人们很少能够欣赏到的演出。”</p>
 <p>神韵演出用纯真纯美的艺术，诠释有着五千年历史的中华传统文化的精髓，Mevel夫妇表示，当今世界需要来自于中华传统文化的教诲。“演唱歌唱还提供了歌词，我们需要这些歌词（的指引）。”Mevel说。</p>
 <p>太太Stéphanie解释道，她们从歌曲中体悟到了中华传统文化中的“礼”和“仁”，“在当今复杂的世界里，个人主义盛行，我们需要聆听（这种传统文化的教诲）。”</p>
@@ -26,65 +26,50 @@
 <p>他举例说，作为宪兵，他也习武，而演出让他对中国的武术有了全新的看法，“因为我习武，但不是中国武术，而是日本武术，演出让我意识到，日本武术中也有中国武术的影子。”</p>
 <p>最后，他表示他非常高兴今天和夫人一起来观赏了演出，因为“演出带来幸福的气息。”他说。</p>
 <h2>资深顾问：神韵敢于传递真相 勇气可嘉</h2>
-<figure id="attachment_13966016" aria-describedby="caption-attachment-13966016" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/04/id13966016-230405112453100101.jpg"><img class="size-large wp-image-13966016" title="" src="https://i.epochtimes.com/assets/uploads/2023/04/id13966016-230405112453100101-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-13966016" class="wp-caption-text">2023年4月5日下午，资深项目管理顾问Luc de La Ville和太太Martine de La Ville于南特市议厅观看了神韵演出。（亦凡／大纪元）</figcaption></figure>
+<figure id="attachment_13966016" aria-describedby="caption-attachment-13966016" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/04/id13966016-230405112453100101.jpg"><img decoding="async" class="size-large wp-image-13966016" title="" src="https://i.epochtimes.com/assets/uploads/2023/04/id13966016-230405112453100101-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-13966016" class="wp-caption-text">2023年4月5日下午，资深项目管理顾问Luc de La Ville和太太Martine de La Ville于南特市议厅观看了神韵演出。（亦凡／大纪元）</figcaption></figure>
 <p>Luc de La Ville和太太Martine de La Ville来自巴黎，今天下午来到了南特观看演出，Martine首先介绍说：“我们住在巴黎郊区，我想看这个演出很久了，这是孩子们送给我的生日礼物。”</p>
 <p>Luc de La Ville从事项目管理多年，曾于法国第四大电视频道任供应商主管十几年，目前是建筑项目管理顾问。他赞佩神韵演员的“演技方面无可挑剔，音乐很美。”</p>
-<p>“我很喜欢与背景<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%A4%A9%E5%B9%95.md#1">天幕</a>互动的舞剧，他们消失后在银屏上出现，很有趣，编排的很好。”他继续说，“我认为演出老少皆宜，让所有的观众都能懂，真的很棒。”</p>
+<p>“我很喜欢与背景天幕互动的舞剧，他们消失后在银屏上出现，很有趣，编排的很好。”他继续说，“我认为演出老少皆宜，让所有的观众都能懂，真的很棒。”</p>
 <p>演出通过不同的舞剧，讲述中国不同历史朝代的故事。Martine表示，看演出前，她并没有做过功课，“我们很惊讶的发现演出讲述了一个个故事，从（中国）不同的民族文化里摘录，很精彩。而且节目之间的解说很好，给我们讲解接下来的剧情。这不仅是简单的舞蹈，还有更深的层面，十分精彩。”</p>
 <p>神韵以恢复中华传统神传文化为使命，La Ville赞赏道：“这太好了。这对我们来说是很陌生的，能（从演出中）看到我们不了解的、神性的一面，受益匪浅。”</p>
 <p>Martine也赞同说：“很好，很勇敢。的确我们对中国的印象是当今的中国，文化方面我们不是很了解。”她认为西方人对当今中国的印象是“中国（共）要吞并西方，给人带来恐惧。”而演出所呈现的则是“中国历史上人们对神的信仰，一种超越自我的力量”。</p>
 <p>“自从毛泽东时代以来，我们其实不了解（中国）之前的历史，几千年的历史，比我们还早，总之这是个美好的发现。”她说。</p>
 <p>夫妇两人均十分钦佩神韵揭示了当今中国的时政问题，展示给观众中共迫害法轮功修炼者的真相，La Ville说：“有勇气发言这很好，需要有华人表达他们的不满，我们是头一次接触这样的中国人，我没想到他们会有自己的立场，这是个很好的发现，我觉得他们很勇敢，演出太美了。”</p>
-<figure id="attachment_13966019" aria-describedby="caption-attachment-13966019" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/04/id13966019-230404194904100731.jpg"><img class="size-large wp-image-13966019" title="" src="https://i.epochtimes.com/assets/uploads/2023/04/id13966019-230404194904100731-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-13966019" class="wp-caption-text">2023年4月5日下午，神韵国际艺术团在位于法国西部历史文化名城南特市的会议厅（Cité des congrès de Nantes）进行了本演季在当地的第二轮的第四场、也是最后一场演出。票房连续四场大爆满。看过演出后，观众们纷纷在天梯书店展台了解法轮功真相，购买法轮功书籍。（章乐／大纪元）</figcaption></figure>
-<figure id="attachment_13966020" aria-describedby="caption-attachment-13966020" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/04/id13966020-230405132623100101.jpg"><img class="size-large wp-image-13966020" title="" src="https://i.epochtimes.com/assets/uploads/2023/04/id13966020-230405132623100101-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-13966020" class="wp-caption-text">图为2023年4日5日下午，南特会议厅剧场大厅内神韵礼品展台吸引着各界观众。（章乐／大纪元）</figcaption></figure>
+<figure id="attachment_13966019" aria-describedby="caption-attachment-13966019" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/04/id13966019-230404194904100731.jpg"><img decoding="async" class="size-large wp-image-13966019" title="" src="https://i.epochtimes.com/assets/uploads/2023/04/id13966019-230404194904100731-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-13966019" class="wp-caption-text">2023年4月5日下午，神韵国际艺术团在位于法国西部历史文化名城南特市的会议厅（Cité des congrès de Nantes）进行了本演季在当地的第二轮的第四场、也是最后一场演出。票房连续四场大爆满。看过演出后，观众们纷纷在天梯书店展台了解法轮功真相，购买法轮功书籍。（章乐／大纪元）</figcaption></figure>
+<figure id="attachment_13966020" aria-describedby="caption-attachment-13966020" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/04/id13966020-230405132623100101.jpg"><img decoding="async" class="size-large wp-image-13966020" title="" src="https://i.epochtimes.com/assets/uploads/2023/04/id13966020-230405132623100101-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-13966020" class="wp-caption-text">图为2023年4日5日下午，南特会议厅剧场大厅内神韵礼品展台吸引着各界观众。（章乐／大纪元）</figcaption></figure>
 <p>责任编辑：曾臻</p>
 <p>&nbsp;</p>
 	
-<hr>
-
-
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/20/6/18/n12194350.md#1">桃园56家委托汽车代检厂  端午连假停止定检</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/20/12/25/n12644376.md#1">桃园56家委托汽车代检厂 元旦起三天停止受理</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/21/6/8/n13006382.md#1">55家委托汽车代检厂12至14日停止受理定检</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/21/12/23/n13454843.md#1">桃园54家委托汽车代检厂 停止受理三天定检服务</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/1/14/n13503898.md#1">中国新年连续假期 桃园停止受理汽车检验服务</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/6/7/n13754255.md#1">台湾明年新年连假 连放10天</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/26/n13891876.md#1">桃园54家汽车代检厂  元旦连续假期停止检验</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/17/n13931768.md#1">和平纪念日连续假期国道匝道管制</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/27/n13959483.md#1">开大管乐社与亲善大使社获奖 社团经营</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/27/n13959480.md#1">东非狒狒抓到了 桃园农业局1枪结束逃亡之旅</a></li>
-<hr>
-
-
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/4/5/n13965361.md#1">大陆移民观神韵 为中国传统文化自豪</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/4/5/n13965429.md#1">研发主管赞神韵：成功承传中华传统文化</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/4/5/n13965433.md#1">公司总监赞神韵：传递传统文化 超级美好</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/4/5/n13965531.md#1">软件开发商赞神韵 天幕精彩绝伦 难以置信</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/4/5/n13965535.md#1">“伟大的艺术家” 神韵南特一天两场大爆满</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/4/5/n13965555.md#1">公司老板盛赞神韵非同凡响 明年会再来观看</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank">探寻真相兼听则明</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/12/15/n9959503.md#1" target="_blank">佚名：这个“英雄”诞生记让人不寒而栗……</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/13/1/28/n3787288.md#1" target="_blank">一名高干子弟给习近平公开信曝酷刑及逼供秘闻</a></li>
-<hr>
-
+<li><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank">中共迫害良心律师</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/1/10/n10045304.md#1" target="_blank">《苦菜花》人物原型的真实人生（4）</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md#1" target="_blank">【新纪元周刊】揭开活摘器官黑幕</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/24/n13957760.md#1">【古道人生】灾荒中新婚妻子卖身救夫最终得团圆</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13963438.md#1">【时事人物】从任性少年到ChatGPT新乌托邦教主</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/27/n13939508.md#1">一代圣主康熙的教子“心法”</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/29/n13961143.md#1">清明不扫墓？ 古人在清明节从事什么活动</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13962873.md#1">【未解之谜】非洲UFO事件 数十小学生的奇遇</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/4/n13965194.md#1">【中国禁闻】清退令下 8000万农民工陷困境</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/5/n13965817.md#1">【马克时空】俄乌比拼弹药 看谁坚持到最后</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/5/n13965413.md#1">【未解之谜】海奥华预言（2）正在逼近的星球危机</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/4/n13965037.md#1">三男子将废弃高中改成高档公寓 入住率100%</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/3/n13964551.md#1">经济萧条下的大陆外卖员：太难做了</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/4/n13964954.md#1">专家：脱钩已开始 许多外企准备离开中国</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/3/n13964701.md#1">机场劝架被吼“闭嘴” 秦岚高EQ举动获赞</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/3/n13964562.md#1">1年痛失3至亲 大陆歌手刘维：户口本上只有我了</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/4/n13964761.md#1">汤唯偕韩籍夫回娘家扫墓 两人随亲友素颜出镜</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/3/n13964646.md#1">张艾嘉宣传电影一句话 泄露与周润发好交情</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/4/n13964945.md#1">金知妍扮古代公主 晒工作照揪粉丝看剧</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/29/n13961054.md#1">有糖尿病也可放心吃！4种零食控血糖又解馋</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/27/n13959660.md#1">吃杏仁减重有4诀窍 还防糖尿病、心脏病</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/3/n13964375.md#1">你饭后经常胀气吗？ 哈佛医生教你如何缓解</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/3/n13964240.md#1">马斯克担忧 商业房地产引发债务危机</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962776.md#1">洗生菜不是开水龙头冲 这样洗才干净</a></li>
-<hr>
-
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/4/5/n13966005.htm">法国南特四场大爆满 观众：神韵带来幸福</a></p><hr>
-
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/23/4/5/n13966005.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/20/n14418304.md#1">【未解之谜】2025预言盘点——中国篇</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/21/n14418708.md#1">台故宫推筑城风云特展 看台湾独特筑城故事</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/24/n14421709.md#1">【未解之谜】皮行者牧场（二）：神秘的隐形人</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/1/n14403677.md#1">善恶有报：泯没良心 恶妇当下变动物</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/5/n14406436.md#1">古代的人是如何过年的？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/25/n14421729.md#1">【车评】本田首部电车 2025 Honda Prologue Elite</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/25/n14421721.md#1">【军事情报局】中共所谓六代机是真六代机吗？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/24/n14421249.md#1">【新闻大家谈】川普达沃斯讲话：习主动致电</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/23/n14420914.md#1">台湾茶叶大使许正龙的“泡茶密码”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/23/n14420923.md#1">夏洛山：建全球最大填海机场 中共做赔本买卖？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/24/n14421046.md#1">北京推保险资金入市 专家吁股民加紧逃离</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/23/n14420977.md#1">王宝强加入周润发跑友圈 为角色成功减重30斤</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/23/n14420918.md#1">刘晓庆：不知自己真实年龄 感觉自己适合属虎</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/24/n14421651.md#1">遭封杀3年 邓伦不露脸不具名拍杂志试水复出</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/23/n14420870.md#1">奥斯卡入围名单揭晓 《璀璨女人梦》成大赢家</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/24/n14421683.md#1">港星薛凯琪至今没出嫁 直呼TVB多少要负点责</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/25/n14421953.md#1">世界最短电扶梯在日本 只有5阶</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/24/n14421359.md#1">为什么航空公司租轮胎给飞机使用？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/25/n14421775.md#1">吃草饲牛肉或榖饲牛肉 哪种更健康？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/21/n14418374.md#1">头发越来越少怎么办？3茶饮5穴位养发</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/18/n14416125.md#1">有备无患 日本家庭避难包必备这些物资</a></li>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/4/5/n13966005.htm">法国南特四场大爆满 观众：神韵带来幸福</a></p><hr>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/23/4/5/n13966005.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
